--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,2 +1,2 @@
-{% include /connectedlearning.tools/css/bootstrap.min.css %}
-{% include /connectedlearning.tools/css/main.css %}
+{% include css/bootstrap.min.css %}
+{% include css/main.css %}
