--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,2 +1,2 @@
-{% include css/bootstrap.min.css %}
-{% include css/main.css %}
+{% include adamcroom/connectedlearning.tools/css/bootstrap.min.css %}
+{% include adamcroom/connectedlearning.tools/css/main.css %}
